# deep-learning-implementation

./: README.md  pyproject.toml
examples/: __init__.py  colab_translation_example.ipynb  train_copy_task.py  train_translation.py
src/transformer/: __init__.py  functional.py  loss.py  model.py  optim.py
src/transformer/nn/: __init__.py  attention.py  decoder.py  embedding.py  encoder.py  feedforward.py  generator.py
tests/: test_transformer.py
